# shellbot

./: .gitignore  README.md  pyproject.toml  setup.py
src/shellbot/: __init__.py  __main__.py  complete.py  idlist.py  job.py  logging.py  shellbot.py  window.py
