[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "shellbot"
version = "0.0.1"
description = "Discord bot for monitoring and controlling remote jobs"
authors = [
    { name = "patztablook22", email = "patrik.zavoral@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "py-cord >= 2.3"
]
